# countre

./: .gitignore  README.md  __init__.py  setup.cfg  setup.py
countre/: _country_attributes.py  _organisations.py  _regex_dict.py  country_information.py  enums.py  regex_dict.py
country_data/: codebook.md  countries_summary_data.csv  create_module.py  data.py  organisations.py  regex_dict.py
tests/: country_names.py  test_attributes.py  test_country_info.py  test_country_names.py  test_organisations.py
