[metadata]
name = countre-mwtb47
version = 0.0.1
author = Matthew Barnes
author_email = mwt.barnes@outlook.com
description = Package to get ISO codes from country names.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mwtb47/countre
project_urls =
    Bug Tracker = https://github.com/mwtb47/countre/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
